# emhash

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSPECTION_REPORT.md  LICENSE  README.md  SECURITY.md  THIRDPARTY_LICENSES.md  build32.sh  check_warnings.sh  conanfile.py  config.cmake.in  hash_bench.rar  hash_emilib.hpp  hash_emilib3.hpp  hash_lru.h  hash_set.hpp  hash_set2.hpp  hash_set3.hpp  hash_set4.hpp  hash_set8.hpp  hash_set81.hpp  hash_table2.hpp  hash_table3.hpp  hash_table4.hpp  hash_table5.hpp  hash_table51.hpp  hash_table53.hpp  hash_table56.hpp  hash_table6.hpp  hash_table7.hpp  hash_table72.hpp  hash_table7s.hpp  hash_table8.hpp  (+5 more)
examples/: CMakeLists.txt  README.md  basic_map.cpp  basic_set.cpp  custom_allocator.cpp  custom_hash.cpp
test/: CMakeLists.txt  eutil.h  hash_map_tests.cpp  main.cpp  test_allocator.cpp
tests/: CMakeLists.txt  Makefile  README.md  debug_bucket22.cpp  debug_emihset2.cpp  debug_hash.cpp  debug_insert.cpp  debug_key55.cpp  debug_small_insert.cpp
tests/archive/: debug_bucket22.cpp  debug_emihset2.cpp  debug_hash.cpp  debug_insert.cpp  debug_key55.cpp  minimal_test.cpp  test_asm.cpp  test_uint.cpp  test_uint2.cpp
tests/attack/: hash_attack.cpp  hash_attack7.cpp  hash_attack_all.cpp  hash_flood_test.cpp  test_collision_hardening.cpp  test_hash_attack.cpp
tests/bench/: ebench.cpp  emhash_bench.cpp  highload_bench.cpp  int_hash_bench.cpp  int_hash_map_bench.cpp  martin_bench.cpp  prefetch_all_bench.cpp  prefetch_bench.cpp  prefetch_bucket_bench.cpp  prefetch_internal_bench.cpp  simd_bitmask_bench.cpp  simd_bitmask_simple.cpp  simd_bitmask_test.cpp
tests/build_attack/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  compile_commands.json
tests/build_bench/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  all_tests.vcxproj  all_tests.vcxproj.filters  attack_test.vcxproj  attack_test.vcxproj.filters  bench.vcxproj  bench.vcxproj.filters  debug_chain.vcxproj  debug_chain.vcxproj.filters  debug_set_erase.vcxproj  debug_set_erase.vcxproj.filters  edge_test.vcxproj  edge_test.vcxproj.filters  emhash_bench.vcxproj  emhash_bench.vcxproj.filters  emhash_test_help.vcxproj  emhash_test_help.vcxproj.filters  emhash_tests.sln  fuzz_reproduce.vcxproj  fuzz_reproduce.vcxproj.filters  hash_attack5.vcxproj  hash_attack5.vcxproj.filters  hash_attack7.vcxproj  (+75 more)
tests/build_check/: ALL_BUILD.vcxproj  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  all_tests.vcxproj  all_tests.vcxproj.filters  attack_test.vcxproj  attack_test.vcxproj.filters  debug_chain.vcxproj  debug_chain.vcxproj.filters  debug_set_erase.vcxproj  debug_set_erase.vcxproj.filters  edge_test.vcxproj  edge_test.vcxproj.filters  emhash_test_help.vcxproj  emhash_test_help.vcxproj.filters  emhash_tests.sln  fuzz_reproduce.vcxproj  fuzz_reproduce.vcxproj.filters  hash_attack5.vcxproj  hash_attack5.vcxproj.filters  hash_attack7.vcxproj  hash_attack7.vcxproj.filters  highload_test.vcxproj  highload_test.vcxproj.filters  min_repro.vcxproj  min_repro.vcxproj.filters  quick_test.vcxproj  quick_test.vcxproj.filters  (+64 more)
tests/build_msvc/: ALL_BUILD.vcxproj  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  all_tests.vcxproj  all_tests.vcxproj.filters  attack_test.vcxproj  attack_test.vcxproj.filters  debug_chain.vcxproj  debug_chain.vcxproj.filters  debug_set_erase.vcxproj  debug_set_erase.vcxproj.filters  edge_test.vcxproj  edge_test.vcxproj.filters  emhash_test_help.vcxproj  emhash_test_help.vcxproj.filters  emhash_tests.sln  fuzz_reproduce.vcxproj  fuzz_reproduce.vcxproj.filters  hash_attack5.vcxproj  hash_attack5.vcxproj.filters  hash_attack7.vcxproj  hash_attack7.vcxproj.filters  highload_test.vcxproj  highload_test.vcxproj.filters  min_repro.vcxproj  min_repro.vcxproj.filters  quick_test.vcxproj  quick_test.vcxproj.filters  (+62 more)
tests/build_wsl/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  compile_commands.json  debug_chain  debug_set_erase  edge_test  fuzz_reproduce  hash_attack5  hash_attack7  highload_test  min_repro  quick_test8  reproduce_crash  reproduce_emhash8_bug  stress_fix  test_attack  test_bad_hash_stress  test_debug  test_debug_find  test_emhash58  test_emhash5_hifi  test_emhash5_stress  test_emhash5_verify  test_emhash_allocator  test_emilib_comprehensive  test_extreme  test_find_slot_bucket  test_functional_edge  test_hashmap_full_api  test_hashset_allocator  test_hashset_full_api  test_hidden_bugs8  test_interface_combo  test_merge_correctness  test_probe_bug  test_repro_collision  test_size_sweep  test_special_key_types  test_stress  (+2 more)
tests/common/: doctest.h  hashers.hpp  maps.hpp  msan-ignorelist.txt  msan_unpoison.hpp  trackers.hpp  utilities.hpp
tests/cov_build/: coverage.info  hash_attack_all_cov  test_emilib_cov  test_extreme_cov  test_hashset_cov  test_stress_all_cov  test_stress_cov  test_string_key_leak_cov  test_verify_cov
tests/coverage_html/: index-sort-f.html  index-sort-l.html  index.html
tests/debug/: README.md  debug_all_maps.cpp  debug_chain.cpp  debug_set_erase.cpp  fuzz_reproduce.cpp  min_repro.cpp  (+5 more)
(+1686 files in other folders)
